--- a/react-task/package.json
+++ b/react-task/package.json
@@ -24,6 +24,8 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bulid": "^1.0.0",
     "css-loader": "^3.2.0",
     "jquery": "^3.4.1",
     "react": "^16.9.0",
